# mrxs2ometiff

./: .gitignore  README.md  conversion.sh  mrxs2ometiff.py  pyproject.toml
src/mrxs2ometiff/: __init__.py  cli.py  convert.py  reader.py  verify.py
src/mrxs2ometiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
verification/: BENCHMARK.md  README.md  benchmark.py  benchmark_results.csv  compare_tiffs.py  run_comparison.sh
